--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,15 @@ header {
     }
     .titolo p {
         
-    font-size: 100px;
-    padding: 150px;
+    font-size: 80px;
         font-family: 'Times New Roman', Times, serif;
     color: #FFD600;
+    padding-top: 5%;
+    padding-left: 25%;
     }
     .text1 p {
          font-size: 24px;
-         padding: 170px;
+         margin: 18%;
 
     }
     .testoeimg{
@@ -74,11 +75,12 @@ header {
 
     .testo  {
         max-width: 100%;
-        padding: 100px;
+        padding: 18%;
         display: flex;
         margin-left: 50px;
         justify-content: left;
         font-size: 24px;
+        margin: auto;
     }
     .testoeimg .txt {
         font-size: 22px;
@@ -86,7 +88,7 @@ header {
     }
     .paragrafo {
         background-color: black;
-        padding: 120px;
+        margin: 10%;
         display: flex;
         font-size: 24px;
         margin: auto;
@@ -108,6 +110,7 @@ header {
         gap: 40px;
         justify-content: space-between;
         width: 90%;
+        margin: 18%;
         
     }
     .trasposizioni {
@@ -119,32 +122,34 @@ header {
 
     .paragrafoo {
         margin: auto;
-        height: 1900px;
+        height: 1600px;
         background-color: black;
-        
     }
+
 
     .enzo {
         font-size: 24px;
         margin: auto;
-        width: 80%;
+        width: 60%;
         background-color: black;
-        height: 500px;
+        padding: 10%;
         
 
     }
     .paragrafoomino {
         background-color: #ffff;
-        height: 600px;
+        height: 400PX;
         color: black;
         margin: auto;
         font-size: 24px;
+        padding: 18%;
+        padding-left: 18%;
         }
 
-    .testoe {
+    .testoe P {
         width: 80%;
-        justify-content: center;
-        padding: 10%;
+
+        margin: 18%;
     }
 
     .imgomino img {
@@ -153,7 +158,6 @@ header {
 
     }
     .paragafofinal {
-        height: 450px;
         margin: auto;
         padding: 10% ;
     }
@@ -162,8 +166,10 @@ header {
         background-color: black;
         color: #ffff;
         font-size: 24px;
-        width: 100%;
+        max-width: auto;
         margin: auto;
+        padding: 18%;
+
     }
 
 footer nav ul {
