--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ header {
         gap: 50px;
         background-color: #ffff;
         color: black;
+  
+        }
+        .testoeimg img {
+            max-width: 140%;
         }
     .imgrodari img {
         width: 300%;
@@ -88,7 +92,7 @@ header {
        }
 
     .testo  {
-        max-width: 100%;
+        max-width: 1100px;
         padding: 18%;
         display: flex;
         margin-left: 50px;
